# wallet-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml  docker-compose.yaml
.github/workflows/: ci.yml
frontend/: package.json
frontend/src/: Allocation.js  App.js  Brokers.js  ChartTooltip.js  Events.js  Menu.js  MoneyUtils.js  Performance.js  PieChart.js  Portfolios.js  Positions.js  StockOperations.js  chartColors.js
src/: broker.rs  error.rs  event.rs  fii.rs  historical.rs  main.rs  operation.rs  portfolio.rs  position.rs  price_cache.rs  rest.rs  scheduling.rs  stock.rs  walletdb.rs  x_response_time.rs
src/historical/: test.rs
