[package]
name = "wallet-api"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo.noronha@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clokwerk = "0.3"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
schemars = { version = "0.8.0-alpha-4", features = ["preserve_order", "chrono"] }
okapi = { version = "0.5.0-alpha-1" }
rayon = "1.4.0"
rocket_cors = "0.5.1"
rocket_okapi = { version = "0.6.0-alpha-1" }
rocket = { version = "0.4.3", default-features = false }
serde = "1.0"
tokio = { version = "0.2", features = ["full"] }
yahoo-finance = { git = "https://github.com/kov/yahoo-finance-rs.git" }

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["json", "mongodb_pool"]

[dependencies.mongodb]
version = "0.3.12"
